--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -12,6 +12,7 @@ Not yet released.
 - Example OpenPanel plugins: [dns-visualizer](https://github.com/stefanpejcic/dns-visualizer) and [domain-diagnostics](https://github.com/stefanpejcic/domain-diagnostics).
 - Added tooltips on *OpenAdmin > Settings > Modules* to indicate that plugins are auto-activated and enterprise license is required for premium features.
 - Added optional '--debug' flag to [`opencli user-resources` command](https://dev.openpanel.com/cli/users.html#Resources), displaying commands used if service start/stop fails from OpenAdmin.
+- Improvements to the OpenAdmin > Users > Resellers pages.
 
 ### 🐛 Bug Fixes
 - [Sidebar missing on OpenAdmin > Emails > Summary - when mailserver not running #695](https://github.com/stefanpejcic/OpenPanel/issues/695)
