--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -2,7 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Debian 13 is now suported](https://github.com/stefanpejcic/OpenPanel/issues/674)
-- Added print statements for most core modules, detaield debug information is now visible when `dev_mode=on`.
+- Added print statements for all core modules in OpenPanel and OpenaAdmin, detailed debug information is now visible when `dev_mode=on`.
 - [ImunifyAV is no longer installed automatically](https://community.openpanel.org/d/193-dont-install-imunifyav-by-default), instead [optional `--imunifyav` flag](/install) is available to install it.
 - implemented success and error messages on *OpenAdmin > Settings > General*.
 - openpanel error log will now on startup display domain and ssl certificates used.
