--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -1,3 +1,6 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+- Fixed bug that allowed reseller to view all plans if they currently have no assigned plans.
+- Fixed bug dispalying notifications count on OpenAdmin dashbaord to reseller users.
+- Fixed error `list object has no element 0` on *OpenAdmin > Users > New* when reseller has no plans assigned.
