--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -4,3 +4,5 @@ Not yet released.
 - Fixed bug that allowed reseller to view all plans if they currently have no assigned plans.
 - Fixed bug dispalying notifications count on OpenAdmin dashbaord to reseller users.
 - Fixed error `list object has no element 0` on *OpenAdmin > Users > New* when reseller has no plans assigned.
+- fixed error `cannot access local variable 'e' where it is not associated with a value` on *OpenAdmin > Services Status > Edit*.
+- [Error in /services #704](https://github.com/stefanpejcic/OpenPanel/issues/704)
