--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -6,3 +6,4 @@ Not yet released.
 - Fixed error `list object has no element 0` on *OpenAdmin > Users > New* when reseller has no plans assigned.
 - fixed error `cannot access local variable 'e' where it is not associated with a value` on *OpenAdmin > Services Status > Edit*.
 - [Error in /services #704](https://github.com/stefanpejcic/OpenPanel/issues/704)
+- fixed bug in `opencli user-add` that prevented updating current accounts count for resellers.
