--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -1,5 +1,8 @@
 Not yet released.
 
+### 💅 Polish
+- Improvements to reseller mode: feature sets per reseller, option for reseller to change password from OpenAdmin, Dashboard page for resellers.
+
 ### 🐛 Bug Fixes
 - Fixed bug that allowed reseller to view all plans if they currently have no assigned plans.
 - Fixed bug dispalying notifications count on OpenAdmin dashbaord to reseller users.
