--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -10,3 +10,4 @@ Not yet released.
 - fixed error `cannot access local variable 'e' where it is not associated with a value` on *OpenAdmin > Services Status > Edit*.
 - [Error in /services #704](https://github.com/stefanpejcic/OpenPanel/issues/704)
 - fixed bug in `opencli user-add` that prevented updating current accounts count for resellers.
+- [phpMyAdmin fails with 500 error (service not starting automatically) #707](https://github.com/stefanpejcic/OpenPanel/issues/707)
