--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- Added [flock](https://linux.die.net/man/1/flock) to `opencli update` command.
+
 ### 🐛 Bug Fixes
