--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -4,3 +4,4 @@ Not yet released.
 - Added [flock](https://linux.die.net/man/1/flock) to `opencli update` command.
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI: 500 error on Manage website in SiteManager #709](https://github.com/stefanpejcic/OpenPanel/issues/709)
