--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Added [flock](https://linux.die.net/man/1/flock) to `opencli update` command.
+- Improvements to `opencli plan-apply`: the system now checks whether the new plan’s RAM limit is lower than the combined RAM usage of all running services. If so, a warning will be logged.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenAdmin UI > OpenAdmin Basic Auth - 500 | name 'username' is not defined #710](https://github.com/stefanpejcic/OpenPanel/issues/710)
