--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -7,3 +7,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [Bug in OpenAdmin UI > OpenAdmin Basic Auth - 500 | name 'username' is not defined #710](https://github.com/stefanpejcic/OpenPanel/issues/710)
 - [Bug in OpenPanel UI: 500 error on Manage website in SiteManager #709](https://github.com/stefanpejcic/OpenPanel/issues/709)
+- [Bug in OpenPanel > SiteManager - incorrect path for requirements.json when NodeJS app is setup in a subdirectory #711](https://github.com/stefanpejcic/OpenPanel/issues/711)
