--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -4,6 +4,7 @@ Not yet released.
 - Added [flock](https://linux.die.net/man/1/flock) to `opencli update` command.
 - Improvements to `opencli plan-apply`: the system now checks whether the new plan’s RAM limit is lower than the combined RAM usage of all running services. If so, a warning will be logged.
 - https://php.watch/api/v1/versions is replaced in *OpenPanel > PHP* and *OpenAdmin > Setitngs > PHP* with https://php-versions-api.openpanel.org/
+- Documented [Setting default user locale](https://openpanel.com/docs/articles/accounts/default-user-locales/#4-default-locale) and added option in *OpenAdmin > Settings > Locales* to set a default locale.
 
 ### 🐛 Bug Fixes
 - [Node.js app deletion does not remove proxy from Nginx config, causing domain failure #717](https://github.com/stefanpejcic/OpenPanel/issues/717)
