--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -7,6 +7,7 @@ Not yet released.
 - Documented [Setting default user locale](https://openpanel.com/docs/articles/accounts/default-user-locales/#4-default-locale) and [added option in *OpenAdmin > Settings > Locales* to set a default locale](https://i.postimg.cc/px5kmYYX/slika.png).
 - [Added option in in *OpenAdmin > Settings > Custom Code* to execute bash script before starting OpenPanel UI](https://i.postimg.cc/CwzSfxJM/slika.png) using [`/root/openpanel_run_on_startup`](https://dev.openpanel.com/customize.html#Before-startup) file.
 - [Added option to view cronjob execution log on *OpenPanel > Advanced > CronJobs*](https://i.postimg.cc/zXx0LDMm/slika.png).
+- Improvements to *OpenPanel > AutoInstaller* backend logic.
 
 ### 🐛 Bug Fixes
 - [Node.js app deletion does not remove proxy from Nginx config, causing domain failure #717](https://github.com/stefanpejcic/OpenPanel/issues/717)
