--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -16,4 +16,4 @@ Not yet released.
 - [Bug in OpenPanel > SiteManager - incorrect path for requirements.json when NodeJS app is setup in a subdirectory #711](https://github.com/stefanpejcic/OpenPanel/issues/711)
 - [fixed bug saving SMTP settings on *OpenAdmin > Settings > Notifications* due to incorect input type on sender field](https://discord.com/channels/1205652108213485568/1205652108213485571/1423569978912800828).
 - fixed css bug on OpenAdmin and OpenPanel templates: `/templates/system/license_error.html`.
-- fixed error loading [Sentinel Firewall](https://sentinelfirewall.org/) UI inside OpenAdmin if linux user `openpanel` already exists, error: `Invalid tempfile ownership [$file]`.
+- fixed error `Invalid tempfile ownership [$file]` when loading [Sentinel Firewall](https://sentinelfirewall.org/) UI inside OpenAdmin if linux user named `openpanel` already exists.
