--- a/website/docs/changelog/1.6.2.md
+++ b/website/docs/changelog/1.6.2.md
@@ -2,6 +2,7 @@ Released on September 30, 2025
 
 ### 💅 Polish
 - Improvements to reseller mode: feature sets per reseller, option for reseller to change password from OpenAdmin, Dashboard page for resellers.
+- OpenAdmin login page now includes custom code in header and footer (from *openadmin > settings > custom code*).
 
 ### 🐛 Bug Fixes
 - Fixed bug that allowed reseller to view all plans if they currently have no assigned plans.
