--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -8,6 +8,7 @@ Not yet released.
 - [Added option in in *OpenAdmin > Settings > Custom Code* to execute bash script before starting OpenPanel UI](https://i.postimg.cc/CwzSfxJM/slika.png) using [`/root/openpanel_run_on_startup`](https://dev.openpanel.com/customize.html#Before-startup) file.
 - [Added option to view cronjob execution log on *OpenPanel > Advanced > CronJobs*](https://i.postimg.cc/zXx0LDMm/slika.png).
 - Improvements to *OpenPanel > AutoInstaller* backend logic.
+- Improvements to 'Information' widget on *OpenPanel > Dashboard*.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenAdmin UI - Changes to reseller's limits are not being applied #721](https://github.com/stefanpejcic/OpenPanel/issues/721)
