--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -9,6 +9,7 @@ Not yet released.
 - [Added option to view cronjob execution log on *OpenPanel > Advanced > CronJobs*](https://i.postimg.cc/zXx0LDMm/slika.png).
 - Improvements to *OpenPanel > AutoInstaller* backend logic.
 - Improvements to 'Information' widget on *OpenPanel > Dashboard*.
+- [Added `--docroot` flag to opencli domains-whoowns command](https://github.com/stefanpejcic/opencli/commit/f9bc92781bc68a2046ede74ab712ecc1cbd4b3ae)
 
 ### 🐛 Bug Fixes
 - [Node.js app deletion does not remove proxy from Nginx config, causing domain failure #717](https://github.com/stefanpejcic/OpenPanel/issues/717)
