--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -10,6 +10,7 @@ Not yet released.
 - Improvements to *OpenPanel > AutoInstaller* backend logic.
 - Improvements to 'Information' widget on *OpenPanel > Dashboard*.
 - [Added `--docroot` flag to opencli domains-whoowns command](https://github.com/stefanpejcic/opencli/commit/f9bc92781bc68a2046ede74ab712ecc1cbd4b3ae)
+- [`opencli domains-edit` command](https://dev.openpanel.com/cli/domains.html#Edit-domains) to cd into domain's docroot, or edit it's VirtualHosts file from the terminal.
 
 ### 🐛 Bug Fixes
 - [Node.js app deletion does not remove proxy from Nginx config, causing domain failure #717](https://github.com/stefanpejcic/OpenPanel/issues/717)
