https://github.com/stefanpejcic/OpenPanel/issues/724

--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -13,6 +13,7 @@ Not yet released.
 - [`opencli domains-edit` command](https://dev.openpanel.com/cli/domains.html#Edit-domains) to cd into domain's docroot, or edit it's VirtualHosts file from the terminal.
 
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /files: error opening file unl.rs/og-image.png #724](https://github.com/stefanpejcic/OpenPanel/issues/724)
 - [Bug in OpenPanel UI on File Editor for Windows characters #725](https://github.com/stefanpejcic/OpenPanel/issues/725#event-20315260100)
 - [Bug in OpenPanel UI on /files when compressing files #727](https://github.com/stefanpejcic/OpenPanel/issues/727)
 - [Node.js app deletion does not remove proxy from Nginx config, causing domain failure #717](https://github.com/stefanpejcic/OpenPanel/issues/717)
