--- a/website/docs/changelog/1.6.3.md
+++ b/website/docs/changelog/1.6.3.md
@@ -14,6 +14,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /files: error opening file unl.rs/og-image.png #724](https://github.com/stefanpejcic/OpenPanel/issues/724)
+- [Creating and deleting Node.js app causes container start error #726](https://github.com/stefanpejcic/OpenPanel/issues/726)
 - [Bug in OpenAdmin search if there is only a single account for reseller #705](https://github.com/stefanpejcic/OpenPanel/issues/705)
 - [Bug in OpenPanel UI on File Editor for Windows characters #725](https://github.com/stefanpejcic/OpenPanel/issues/725#event-20315260100)
 - [Bug in OpenPanel UI on /files when compressing files #727](https://github.com/stefanpejcic/OpenPanel/issues/727)
