--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- [opencli error](https://dev.openpanel.com/cli/error.html#Error) command can now be used only when dev_mode is enabled.
+
 ### 🐛 Bug Fixes
