--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -4,5 +4,6 @@ Not yet released.
 - [opencli error](https://dev.openpanel.com/cli/error.html#Error) command can now be used only when dev_mode is enabled.
 - When mysql conneciton fails, OpenAdmin will now display message: *Error Establishing a Database Connection*.
 - Removed dummy cronjob for new isntallations.
+- All required input fields on OpenPanel forms are now marked with an asterisk.
 
 ### 🐛 Bug Fixes
