--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -7,3 +7,4 @@ Not yet released.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
 
 ### 🐛 Bug Fixes
+- [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
