--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -8,3 +8,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
+- [visual bug in /website?domain #735](https://github.com/stefanpejcic/OpenPanel/issues/735)
