--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -5,7 +5,9 @@ Not yet released.
 - When mysql conneciton fails, OpenAdmin will now display message: *Error Establishing a Database Connection*.
 - Removed dummy cronjob for new isntallations.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
+- 'healthcheck' mysql user is now considered a system user from 'OpenPanel > MySQL > Users'.
 
 ### 🐛 Bug Fixes
 - [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
 - [visual bug in /website?domain #735](https://github.com/stefanpejcic/OpenPanel/issues/735)
+- fixed css bug with backgound on hover over icons in *OpenPanel > Dashboard*.
