--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -7,6 +7,7 @@ Not yet released.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
 - 'healthcheck' mysql user is now considered a system user from 'OpenPanel > MySQL > Users'.
 - implemented connection pooling for mysql on both OpenPanel and OpenAdmin.
+- Added jinja template caching on OpenPanel.
 
 ### 🐛 Bug Fixes
 - [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
