--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -6,8 +6,9 @@ Not yet released.
 - Removed dummy cronjob for new isntallations.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
 - 'healthcheck' mysql user is now considered a system user from 'OpenPanel > MySQL > Users'.
-- implemented connection pooling for mysql on both OpenPanel and OpenAdmin.
+- Implemented connection pooling for mysql on both OpenPanel and OpenAdmin.
 - Added jinja template caching on OpenPanel.
+- Improved locale functions on OpenPanel.
 
 ### 🐛 Bug Fixes
 - [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
