--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -14,3 +14,4 @@ Not yet released.
 - [Node js website unable to install requirements #730](https://github.com/stefanpejcic/OpenPanel/issues/730)
 - [visual bug in /website?domain #735](https://github.com/stefanpejcic/OpenPanel/issues/735)
 - fixed css bug with backgound on hover over icons in *OpenPanel > Dashboard*.
+- fixed css bug on *Firewall* widget on Site Manager: https://i.postimg.cc/qqGKZ1Cm/2025-10-20-14-11.png
