--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -3,7 +3,7 @@ Not yet released.
 ### 💅 Polish
 - [opencli error](https://dev.openpanel.com/cli/error.html#Error) command can now be used only when dev_mode is enabled.
 - When mysql conneciton fails, OpenAdmin will now display message: *Error Establishing a Database Connection*.
-- Removed dummy cronjob for new isntallations.
+- Removed dummy cronjob for new installations.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
 - 'healthcheck' mysql user is now considered a system user from 'OpenPanel > MySQL > Users'.
 - Implemented connection pooling for mysql on all OpenPanel core modules.
