--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -18,3 +18,4 @@ Not yet released.
 - [fixed css bug on *Firewall* widget on Site Manager](https://i.postimg.cc/qqGKZ1Cm/2025-10-20-14-11.png).
 - [Bug in OpenPanel UI on /cronjobs - Cronjob preset for every minute actually runs every second #729](https://github.com/stefanpejcic/OpenPanel/issues/729)
 - [unable to Delete/Detach Website Builder /website?domain= #739](https://github.com/stefanpejcic/OpenPanel/issues/739)
+- [after creating new user will not send email/user/new #738](https://github.com/stefanpejcic/OpenPanel/issues/738)
