--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -19,3 +19,4 @@ Not yet released.
 - [Bug in OpenPanel UI on /cronjobs - Cronjob preset for every minute actually runs every second #729](https://github.com/stefanpejcic/OpenPanel/issues/729)
 - [unable to Delete/Detach Website Builder /website?domain= #739](https://github.com/stefanpejcic/OpenPanel/issues/739)
 - [after creating new user will not send email/user/new #738](https://github.com/stefanpejcic/OpenPanel/issues/738)
+- fixed caching issue on nodejs/python app logs, causing logs to be cached for 60s.
