--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -9,6 +9,7 @@ Not yet released.
 - Implemented connection pooling for mysql on all OpenPanel core modules.
 - Added jinja template caching on OpenPanel.
 - Improved locale functions on OpenPanel.
+- [Redis, Memcached, Elasticsearch, Opensearch and Varnish pages will now display real-time resurce usage if service is active and 'docker' feature enabled for user](https://i.postimg.cc/MxCWSDrj/2025-10-22-17-22.png).
 
 ### 🐛 Bug Fixes
 - [Can't use special chars on Administrator password #737](https://github.com/stefanpejcic/OpenPanel/issues/737)
