--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -1,9 +1,9 @@
 Not yet released.
 
 ### 💅 Polish
-- [opencli error](https://dev.openpanel.com/cli/error.html#Error) command can now be used only when dev_mode is enabled.
-- When mysql conneciton fails, OpenAdmin will now display message: *Error Establishing a Database Connection*.
-- Removed dummy cronjob for new installations.
+- Added 'services' module, enabling users to view system service statuses, start or stop services, and monitor current resource usage.
+- When mysql conneciton fails, OpenAdmin will now display a generic message: *Error Establishing a Database Connection*.
+- Removed dummy cronjob example from new installations.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
 - 'healthcheck' mysql user is now considered a system user from 'OpenPanel > MySQL > Users'.
 - Implemented connection pooling for mysql on all OpenPanel core modules.
@@ -21,3 +21,4 @@ Not yet released.
 - [unable to Delete/Detach Website Builder /website?domain= #739](https://github.com/stefanpejcic/OpenPanel/issues/739)
 - [after creating new user will not send email/user/new #738](https://github.com/stefanpejcic/OpenPanel/issues/738)
 - fixed caching issue on nodejs/python app logs, causing logs to be cached for 60s.
+- [opencli error](https://dev.openpanel.com/cli/error.html#Error) command can now be used only when dev_mode is enabled.
