--- a/website/docs/changelog/1.6.4.md
+++ b/website/docs/changelog/1.6.4.md
@@ -1,7 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
-- Added 'services' module, enabling users to view system service statuses, start or stop services, and monitor current resource usage.
+- Added ['services' module](https://i.postimg.cc/08pmwZFG/slika.png), enabling users to view system service statuses, start or stop services, and monitor current resource usage.
 - When mysql conneciton fails, OpenAdmin will now display a generic message: *Error Establishing a Database Connection*.
 - Removed dummy cronjob example from new installations.
 - All required input fields on OpenPanel forms are now marked with an asterisk.
