--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -1,3 +1,7 @@
 Not yet released.
 
+💅 Polish
+- improved `oprencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
+
 ### 🐛 Bug Fixes
+- Fixed several bugs in install script - thanks to NeoNomad to reporting!
