--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 💅 Polish
+- docker compose plugin for new installations is now updated from v2.30.3 to [v2.40.2](https://docs.docker.com/compose/releases/release-notes/#2402).
 - improved `oprencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
 
 ### 🐛 Bug Fixes
