--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -4,6 +4,7 @@ Not yet released.
 - docker compose plugin for new installations is now updated from v2.30.3 to [v2.40.2](https://docs.docker.com/compose/releases/release-notes/#2402).
 - improved `oprencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
 - [Option to add a custom startup command for Node apps #733](https://github.com/stefanpejcic/OpenPanel/discussions/733)
+- [Added tooltips to all options when editing Python/Node applications](https://i.postimg.cc/VmkXHfjV/2025-10-24-15-04.png).
 
 ### 🐛 Bug Fixes
 - Fixed several bugs in install script - thanks to NeoNomad to reporting!
