--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -8,3 +8,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed several bugs in install script - thanks to NeoNomad to reporting!
+- fixed css bug on 'service status' widget in top-right corner of OpenPanel UI pages.
