--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -5,6 +5,7 @@ Not yet released.
 - improved `oprencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
 - [Option to add a custom startup command for Node apps #733](https://github.com/stefanpejcic/OpenPanel/discussions/733)
 - Added tooltips to all options when [editing Python/Node applications](https://i.postimg.cc/VmkXHfjV/2025-10-24-15-04.png) and for [WordPress Installer](https://i.postimg.cc/W3BN207m/2025-10-24-15-27.png).
+- Added option in *OpenAdmin > Settings > Notifications* to disable checking if configured nameservers resolve to the server.
 
 ### 🐛 Bug Fixes
 - Fixed several bugs in install script - thanks to NeoNomad to reporting!
