--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -12,3 +12,4 @@ Not yet released.
 - Fixed several bugs in install script - thanks to NeoNomad to reporting!
 - fixed css bug on 'service status' widget in top-right corner of OpenPanel UI pages.
 - fixed error saving ssh settings on openadmin: ` "500 name 'command' is not defined"`
+- fixed 500 error on MySQL > Users.
