--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -13,3 +13,6 @@ Not yet released.
 - fixed css bug on 'service status' widget in top-right corner of OpenPanel UI pages.
 - fixed error saving ssh settings on openadmin: ` "500 name 'command' is not defined"`
 - fixed 500 error on MySQL > Users.
+- fixed js bug on login form: *Uncaught ReferenceError: convertToLowerCase is not defined*.
+- fixed js bug importing punnycode cdn: *module is not defined*.
+- 
