--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -16,3 +16,5 @@ Released on October 24, 2025
 - fixed 500 errors on 'MySQL > Users', 'PHP > Settings' and 'PHP > PHP.INI Editor' pages.
 - fixed js bug on login form: *Uncaught ReferenceError: convertToLowerCase is not defined*.
 - fixed js bug importing punnycode cdn: *module is not defined*.
+- fixed incorect tooltip ids on openadmin > sse widget.
+
