--- a/website/docs/changelog/1.6.5.md
+++ b/website/docs/changelog/1.6.5.md
@@ -2,7 +2,7 @@ Released on October 24, 2025
 
 💅 Polish
 - docker compose plugin for new installations is now updated from v2.30.3 to [v2.40.2](https://docs.docker.com/compose/releases/release-notes/#2402).
-- improved `oprencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
+- improved `opencli imunify install` command to display errors and abort if imav service install failed (unsupported os or CPU by Imunify).
 - [Option to add a custom startup command for Node apps #733](https://github.com/stefanpejcic/OpenPanel/discussions/733)
 - Added tooltips to all options when [editing Python/Node applications](https://i.postimg.cc/VmkXHfjV/2025-10-24-15-04.png) and for [WordPress Installer](https://i.postimg.cc/W3BN207m/2025-10-24-15-27.png).
 - Added option in *OpenAdmin > Settings > Notifications* to disable checking if configured nameservers resolve to the server.
