--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+💅 Polish
+- added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service.
+
 ### 🐛 Bug Fixes
