--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -4,3 +4,5 @@ Not yet released.
 - added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service.
 
 ### 🐛 Bug Fixes
+- fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
+
