--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -1,7 +1,8 @@
 Not yet released.
 
 💅 Polish
-- added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service.
+- [added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service](https://discord.com/channels/1205652108213485568/1205652108213485571/1432304746647261205).
+- [option to specify PNPM or NPM for nodejs apps #734](https://github.com/stefanpejcic/OpenPanel/discussions/734)
 
 ### 🐛 Bug Fixes
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
