--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -3,6 +3,7 @@ Not yet released.
 💅 Polish
 - [added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service](https://discord.com/channels/1205652108213485568/1205652108213485571/1432304746647261205).
 - [option to specify PNPM or NPM for nodejs apps #734](https://github.com/stefanpejcic/OpenPanel/discussions/734)
+- PostgreSQL features are out of BETA!
 
 ### 🐛 Bug Fixes
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
