--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -4,6 +4,7 @@ Not yet released.
 - [PostgreSQL support #501](https://github.com/stefanpejcic/OpenPanel/issues/501)
 - [added an option for 'PMA_ABSOLUTE_URI' per user to be used in their phpmyadmin service](https://discord.com/channels/1205652108213485568/1205652108213485571/1432304746647261205).
 - [option to specify PNPM or NPM for nodejs apps #734](https://github.com/stefanpejcic/OpenPanel/discussions/734)
+- CSS improvements to MySQL & PostgreSQL Wizard pages.
 
 ### 🐛 Bug Fixes
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
