--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -8,4 +8,5 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
+- Fixed CSS issue with table columns on Domains page.
 
