--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -10,4 +10,5 @@ Not yet released.
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
 - Fixed CSS issue with table columns on Domains page.
 - Fixed 500 error on POST request when creating mysql users: */mysql/user*.
+- [Fresh install can't list users #736](https://github.com/stefanpejcic/OpenPanel/issues/736)
 
