--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -11,4 +11,5 @@ Not yet released.
 - Fixed CSS issue with table columns on Domains page.
 - Fixed 500 error on POST request when creating mysql users: */mysql/user*.
 - [Fresh install can't list users #736](https://github.com/stefanpejcic/OpenPanel/issues/736)
+- Fixed js error on WP Manager causing PHP version and database login not to display.
 
