--- a/website/docs/changelog/1.6.6.md
+++ b/website/docs/changelog/1.6.6.md
@@ -8,6 +8,8 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [WordPress autologin plugin fails to install #748](https://github.com/stefanpejcic/OpenPanel/issues/748)
+- [DNS resolve not working for user's www network #750](https://github.com/stefanpejcic/OpenPanel/issues/750#issuecomment-3456613420)
+- [WordPress installation doesn't appear in site manager after installing, shows up after scan #747](https://github.com/stefanpejcic/OpenPanel/issues/747)
 - fixed error `/usr/local/opencli/sentinel.sh: eval: line 979: unexpected EOF while looking for matching ''`
 - Fixed CSS issue with table columns on Domains page.
 - Fixed 500 error on POST request when creating mysql users: */mysql/user*.
