--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,3 +1,7 @@
 Not yet released.
 
+### 💅 Polish
+- Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
+
+
 ### 🐛 Bug Fixes
