--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -6,3 +6,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed css bug on toast notifications when mobile.
+- Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
