--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Add option to edit php limits for phpmyadmin #563](https://github.com/stefanpejcic/OpenPanel/discussions/563)
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
 
 
