--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,10 +1,11 @@
 Not yet released.
 
 ### 💅 Polish
+- Improvements to DNS Clustering.
 - [Add option to edit php limits for phpmyadmin #563](https://github.com/stefanpejcic/OpenPanel/discussions/563)
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
 - Added [`favorites_items` option](https://dev.openpanel.com/cli/config.html#favorites-items).
-
+- 'BETA' filter is hidden on *OpenAdmin > Settings > Modules* as currently there are no beta modules available.
 
 ### 🐛 Bug Fixes
 - Fixed css bug on toast notifications when mobile.
