--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,7 +1,8 @@
 Not yet released.
 
 ### 💅 Polish
-- Improvements to DNS Clustering.
+- Improvements to DNS Clustering feature.
+- [Improvements to *OpenAdmin > Dashboard* page](https://i.postimg.cc/R4Yd6DTg/2025-10-30-18-13.png).
 - [Add option to edit php limits for phpmyadmin #563](https://github.com/stefanpejcic/OpenPanel/discussions/563)
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
 - Added [`favorites_items` option](https://dev.openpanel.com/cli/config.html#favorites-items).
