--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -7,6 +7,7 @@ Not yet released.
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
 - Added [`favorites_items` option](https://dev.openpanel.com/cli/config.html#favorites-items).
 - 'BETA' filter is hidden on *OpenAdmin > Settings > Modules* as currently there are no beta modules available.
+- Added [`favicons` option](#) allowing user to specify api to use for favicons.
 
 ### 🐛 Bug Fixes
 - Fixed css bug on toast notifications when mobile.
