--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -10,5 +10,6 @@ Not yet released.
 - Added [`favicons` option](#) allowing user to specify api to use for favicons.
 
 ### 🐛 Bug Fixes
+- [Adding server to DNS Clustering causes syntax errors in named.conf.options #751](https://github.com/stefanpejcic/OpenPanel/issues/751)
 - Fixed css bug on toast notifications when mobile.
 - Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
