--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -13,3 +13,4 @@ Not yet released.
 - [Adding server to DNS Clustering causes syntax errors in named.conf.options #751](https://github.com/stefanpejcic/OpenPanel/issues/751)
 - Fixed css bug on toast notifications when mobile.
 - Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
+- Fixed bug deleting dns zone on domains deletion.
