--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -11,6 +11,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Adding server to DNS Clustering causes syntax errors in named.conf.options #751](https://github.com/stefanpejcic/OpenPanel/issues/751)
+- [Change username field is shown when option is disabled #757](https://github.com/stefanpejcic/OpenPanel/issues/757)
 - Fixed css bug on toast notifications when mobile.
 - Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
 - Fixed bug deleting dns zone on domains deletion.
