--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -2,7 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Improvements to DNS Clustering feature.
-- User's activity log now indicates what user used to login: Password, 2FA code, API call.
+- [150+ actions inside OpenPanel UI are now recorded in user's activity log](/docs/panel/account/account_activity).
 - [Improvements to *OpenAdmin > Dashboard* page](https://i.postimg.cc/R4Yd6DTg/2025-10-30-18-13.png).
 - [Add option to edit php limits for phpmyadmin #563](https://github.com/stefanpejcic/OpenPanel/discussions/563)
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
