--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -16,3 +16,4 @@ Not yet released.
 - Fixed css bug on toast notifications when mobile.
 - Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
 - Fixed bug deleting dns zone on domains deletion.
+- Fixed bug showing full source/destination paths in User Activity Log for move&copy actions using File Manager.
