--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -10,6 +10,7 @@ Not yet released.
 - 'BETA' filter is hidden on *OpenAdmin > Settings > Modules* as currently there are no beta modules available.
 - Added [`favicons` option](#) allowing user to specify api to use for favicons.
 - fix_permissions module is no longer auto-active on new installs.
+- Localization for all Backups templates: Settings, Destinations, Overview.
 
 ### 🐛 Bug Fixes
 - [Configure new file/folder name in File Manager on Copy/Move actions #759](https://github.com/stefanpejcic/OpenPanel/issues/759)
