--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -13,6 +13,7 @@ Not yet released.
 - Localization for all Backups templates: Settings, Destinations, Overview.
 - Template macros for common elements in Inodes Explorer and Disk Usage modules.
 - File Editor now supports setting fullscreen via url, example: `&fullscreen=false` `&fullscreen=true`.
+- Command `opencli server-motd` is removed.
 
 ### 🐛 Bug Fixes
 - [Configure new file/folder name in File Manager on Copy/Move actions #759](https://github.com/stefanpejcic/OpenPanel/issues/759)
