--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -14,6 +14,7 @@ Not yet released.
 - Template macros for common elements in Inodes Explorer and Disk Usage modules.
 - File Editor now supports setting fullscreen via url, example: `&fullscreen=false` `&fullscreen=true`.
 - Command `opencli server-motd` is removed.
+- Added missing Usage and Description for opencli commands.
 
 ### 🐛 Bug Fixes
 - [Configure new file/folder name in File Manager on Copy/Move actions #759](https://github.com/stefanpejcic/OpenPanel/issues/759)
