--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -25,3 +25,4 @@ Not yet released.
 - Fixed bug deleting dns zone on domains deletion.
 - Fixed bug showing full source/destination paths in User Activity Log for move&copy actions using File Manager.
 - Fixed error sending email to new user: *Bad recipient address syntax*.
+- Fixed CSS bug with column width on activity table in *OpenAdmin > Users > single user > Activity Log*.
