--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Complete Spanish translation](https://github.com/stefanpejcic/OpenPanel/pull/760) - thank you [Santi Casals](http://casa.ls/)
 - Improvements to DNS Clustering feature.
 - [150+ actions inside OpenPanel UI are now recorded in user's activity log](/docs/panel/account/account_activity).
 - [Improvements to *OpenAdmin > Dashboard* page](https://i.postimg.cc/R4Yd6DTg/2025-10-30-18-13.png).
