--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -28,3 +28,4 @@ Not yet released.
 - Fixed error sending email to new user: *Bad recipient address syntax*.
 - Fixed CSS bug with column width on activity table in *OpenAdmin > Users > single user > Activity Log*.
 - Fixed error *name 'tempalte_name' is not defined* on OpenAdmin > Dashboard when dismissing widgets.
+- Fixed css bug with icons on OpenPanel > Dashboard page.
