--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -16,6 +16,7 @@ Not yet released.
 - File Editor now supports setting fullscreen via url, example: `&fullscreen=false` `&fullscreen=true`.
 - Command `opencli server-motd` is removed.
 - Added missing Usage and Description for opencli commands.
+- Actions bar on *OpenPanel > FileManager* is now sticky on scroll.
 
 ### 🐛 Bug Fixes
 - [Configure new file/folder name in File Manager on Copy/Move actions #759](https://github.com/stefanpejcic/OpenPanel/issues/759)
