--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -17,6 +17,7 @@ Not yet released.
 - Command `opencli server-motd` is removed.
 - Added missing Usage and Description for opencli commands.
 - Actions bar on *OpenPanel > FileManager* is now sticky on scroll.
+- 'link' and 'websites' columns on *OpenPanel > Domains* are now visible by default.
 
 ### 🐛 Bug Fixes
 - [Configure new file/folder name in File Manager on Copy/Move actions #759](https://github.com/stefanpejcic/OpenPanel/issues/759)
