--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -1,6 +1,6 @@
 Not yet released.
 
 ### 💅 Polish
-- Added `terminal_timeout` setting allowing you to specify max execution time for *OpenPanel > Docker > Terminal* commands.
+- Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing you to specify max execution time for *OpenPanel > Docker > Terminal* commands.
 
 ### 🐛 Bug Fixes
