--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -1,4 +1,4 @@
-Not yet released.
+Released on November 05, 2025
 
 ### 💅 Polish
 - [Complete Spanish translation](https://github.com/stefanpejcic/OpenPanel/pull/760) - thank you [Santi Casals](http://casa.ls/)
