--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -2,5 +2,6 @@ Not yet released.
 
 ### 💅 Polish
 - Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing you to specify max execution time for *OpenPanel > Docker > Terminal* commands.
+- *OpenPanel > Docker > Terminal* and *OpenAdmin > Advanced > Terminal* will now display info tooltip that terminal is non-interactive and show current `terminal_timeout` value.
 
 ### 🐛 Bug Fixes
