--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -9,7 +9,7 @@ Released on November 05, 2025
 - Same 'Logs' section is now reused on all pages: Redis, ElasticSearch, OpenSearch, Memcached, Varnish, phpMyAdmin, pgAdmin, Services.
 - Added [`favorites_items` option](https://dev.openpanel.com/cli/config.html#favorites-items).
 - 'BETA' filter is hidden on *OpenAdmin > Settings > Modules* as currently there are no beta modules available.
-- Added [`favicons` option](#) allowing user to specify api to use for favicons.
+- Added [`favicons` option](https://dev.openpanel.com/cli/config.html#favicons) allowing user to specify api to use for favicons.
 - fix_permissions module is no longer auto-active on new installs.
 - Localization for all Backups templates: Settings, Destinations, Overview.
 - Template macros for common elements in Inodes Explorer and Disk Usage modules.
