--- a/website/docs/changelog/1.6.7.md
+++ b/website/docs/changelog/1.6.7.md
@@ -26,7 +26,7 @@ Released on November 05, 2025
 - Fixed css bug on toast notifications when mobile.
 - Fixed error *ERROR:openpanel:UnboundLocalError: cannot access local variable 'mail_services_running' where it is not associated with a value* on OpenPanel > Webmail when mailserver module is enabled but not installed.
 - Fixed bug deleting dns zone on domains deletion.
-- Fixed bug showing full source/destination paths in User Activity Log for move&copy actions using File Manager.
+- Fixed bug showing full source/destination paths in User Activity Log for move and copy actions using File Manager.
 - Fixed error sending email to new user: *Bad recipient address syntax*.
 - Fixed CSS bug with column width on activity table in *OpenAdmin > Users > single user > Activity Log*.
 - Fixed error *name 'tempalte_name' is not defined* on OpenAdmin > Dashboard when dismissing widgets.
