--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -7,3 +7,4 @@ Not yet released.
 - 'Websites' menu item added in OpenPanel sidebar.
 
 ### 🐛 Bug Fixes
+- Fixed bug dispalying html websites count on *OpenPanel > Auto Installer* page.
