--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -1,7 +1,8 @@
 Not yet released.
 
 ### 💅 Polish
-- Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing you to specify max execution time for *OpenPanel > Docker > Terminal* commands.
+- Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing Administrators to specify max execution time for *OpenPanel > Docker > Terminal* commands.
+- Added [`activity_max_size_bytes` setting](https://dev.openpanel.com/cli/config.html#activity-max-size-bytes)allowing Administrators to set file size in bytes to keep for user's Activity Log.
 - *OpenPanel > Docker > Terminal* and *OpenAdmin > Advanced > Terminal* will now display info tooltip that terminal is non-interactive and show current `terminal_timeout` value.
 - [SSH connection is now validated before adding a slave DNS server in *OpenAdmin > Domains > DNS CLuster*](https://github.com/stefanpejcic/OpenPanel/discussions/756#discussioncomment-14882105).
 - 'Websites' menu item added in OpenPanel sidebar.
