--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [WAF widget on Site Manager now displays number of challenged and blocked requests on this domain for the last 60 minutes](https://i.postimg.cc/jq7xfJ0C/wp-waf.png)
 - Added [`terminal_timeout` setting](https://dev.openpanel.com/cli/config.html#terminal_timeout) allowing Administrators to specify max execution time for *OpenPanel > Docker > Terminal* commands.
 - Added [`activity_max_size_bytes` setting](https://dev.openpanel.com/cli/config.html#activity-max-size-bytes)allowing Administrators to set file size in bytes to keep for user's Activity Log.
 - *OpenPanel > Docker > Terminal* and *OpenAdmin > Advanced > Terminal* will now display info tooltip that terminal is non-interactive and show current `terminal_timeout` value.
