resolves https://github.com/stefanpejcic/OpenPanel/issues/763
https://github.com/stefanpejcic/OpenPanel/issues/763

--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -11,3 +11,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - Fixed bug dispalying html websites count on *OpenPanel > Auto Installer* page.
+- [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
