--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -12,3 +12,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - Fixed bug dispalying html websites count on *OpenPanel > Auto Installer* page.
 - [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
+- [Firewall has contradictory information, and displays an error when trying to change it #762](https://github.com/stefanpejcic/OpenPanel/issues/762)
