--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -14,3 +14,4 @@ Not yet released.
 - [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
 - [Firewall has contradictory information, and displays an error when trying to change it #762](https://github.com/stefanpejcic/OpenPanel/issues/762)
 - Fixed error generating database backup for WordPress webiste from WP Manager: *Error during backup: Error: Backup request failed.*.
+- [Several problems on Wordpress Delete #765](https://github.com/stefanpejcic/OpenPanel/issues/765)
