--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -10,7 +10,8 @@ Not yet released.
 - 'Websites' menu item added in OpenPanel sidebar.
 
 ### 🐛 Bug Fixes
-- Fixed bug dispalying html websites count on *OpenPanel > Auto Installer* page.
+- Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
+- [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
 - [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
 - [Firewall has contradictory information, and displays an error when trying to change it #762](https://github.com/stefanpejcic/OpenPanel/issues/762)
 - Fixed error generating database backup for WordPress webiste from WP Manager: *Error during backup: Error: Backup request failed.*.
