--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -8,6 +8,7 @@ Not yet released.
 - *OpenPanel > Docker > Terminal* and *OpenAdmin > Advanced > Terminal* will now display info tooltip that terminal is non-interactive and show current `terminal_timeout` value.
 - [SSH connection is now validated before adding a slave DNS server in *OpenAdmin > Domains > DNS CLuster*](https://github.com/stefanpejcic/OpenPanel/discussions/756#discussioncomment-14882105).
 - 'Websites' menu item added in OpenPanel sidebar.
+- Mautic is restored in *OpenAdmin > Settings > Modules* as a 'BETA' module.
 
 ### 🐛 Bug Fixes
 - Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
