--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -9,7 +9,7 @@ Not yet released.
 - [SSH connection is now validated before adding a slave DNS server in *OpenAdmin > Domains > DNS CLuster*](https://github.com/stefanpejcic/OpenPanel/discussions/756#discussioncomment-14882105).
 - 'Websites' menu item added in OpenPanel sidebar.
 - Mautic is restored in *OpenAdmin > Settings > Modules* as a 'BETA' module.
-
+- 'SSH login' settting is now available under *OpenAdmin > Settings > Notificaitons*.
 ### 🐛 Bug Fixes
 - Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
 - [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
