--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -10,6 +10,7 @@ Not yet released.
 - 'Websites' menu item added in OpenPanel sidebar.
 - Mautic is restored in *OpenAdmin > Settings > Modules* as a 'BETA' module.
 - 'SSH login' settting is now available under *OpenAdmin > Settings > Notificaitons*.
+- *blacklist_useragents* setting is Off for new installations.
 ### 🐛 Bug Fixes
 - Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
 - [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
