--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -11,7 +11,9 @@ Not yet released.
 - Mautic is restored in *OpenAdmin > Settings > Modules* as a 'BETA' module.
 - 'SSH login' settting is now available under *OpenAdmin > Settings > Notificaitons*.
 - *blacklist_useragents* setting is Off for new installations.
+
 ### 🐛 Bug Fixes
+- [Bug in OpenPanel UI on /mysql/wizard #752](https://github.com/stefanpejcic/OpenPanel/issues/752)
 - Fixed bug displaying html websites count on *OpenPanel > Auto Installer* page.
 - [Bug in OpenPanel UI on /mysql/phpmyadmin #761](https://github.com/stefanpejcic/OpenPanel/issues/761)
 - [Can't use single quotes (') on website description on Wordpress installation #763](https://github.com/stefanpejcic/OpenPanel/issues/763)
