--- a/website/docs/changelog/1.6.8.md
+++ b/website/docs/changelog/1.6.8.md
@@ -11,6 +11,7 @@ Not yet released.
 - Mautic is restored in *OpenAdmin > Settings > Modules* as a 'BETA' module.
 - 'SSH login' settting is now available under *OpenAdmin > Settings > Notificaitons*.
 - *blacklist_useragents* setting is Off for new installations.
+- username, db_name and password generators on all forms are now using unified fucnitons from `static/js/generator.js`.
 
 ### 🐛 Bug Fixes
 - [Bug in OpenPanel UI on /mysql/wizard #752](https://github.com/stefanpejcic/OpenPanel/issues/752)
